force-app/main/default/objects/Account/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>