force-app/main/default/objects/Account/fields/Git__c.field-meta.xml
<CustomField>
    <fullName>Git__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Git</label>
    <type>Checkbox</type>
</CustomField>