force-app/main/default/objects/Account/fields/Github__c.field-meta.xml
<CustomField>
    <fullName>Github__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Github</label>
    <type>Checkbox</type>
</CustomField>