force-app/main/default/objects/Account/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <description>Lead Id will be mapped here which will be used as subscriber key in marketing cloud</description>
    <label>Lead Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>